network/10/cilium/policy-1.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cilium-policy-10-1"
  namespace: np-10-app
spec:
  endpointSelector:
    matchLabels:
      app: app
  ingress:
  - fromEndpoints:
    - matchLabels:
        role: trusted
        k8s:io.kubernetes.pod.namespace: np-10-internal
    toPorts:
      - ports:
        - port: "8080"
          protocol: ANY
